--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="white">#ffffff</color>
     <color name="grey">#bfbfbf</color>
+    <color name="black">#000000</color>
 
 
 </resources>
