--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="white">#ffffff</color>
     <color name="grey">#bfbfbf</color>
     <color name="black">#000000</color>
+    <color name="link_blue">#005ce6</color>
 
 
 </resources>
