--- a/app/src/main/res/layout/snippet_center_editprofile.xml
+++ b/app/src/main/res/layout/snippet_center_editprofile.xml
@@ -12,7 +12,7 @@
             android:background="@color/white"
             android:padding="20dp">
 
-            <android.support.v4.widget.CircleImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:id="@+id/profile_photo"
