--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -10,6 +10,7 @@
         android:id="@+id/relLayout1">
 
         <!--gallery toolbar-->
+        <include layout="@layout/snippet_top_gallerytoolbar"/>
 
     </RelativeLayout>
 
