--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/relLayout1"
             android:id="@+id/relLayout2"
-            android:background="@drawable/white_grey_border_bottom">
+            android:background="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,7 +68,8 @@
                 android:orientation="vertical"
                 android:layout_below="@+id/linLayout"
                 android:padding="20dp"
-                android:id="@+id/linLayout2">
+                android:id="@+id/linLayout2"
+                android:background="@drawable/white_grey_border_bottom">
 
                 <TextView
                     android:layout_width="match_parent"
